# varu64-rs

./: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: roundtrip.rs  roundtrip_non_zero.rs
src/: lib.rs  nb.rs
src/codec/: mod.rs  prefix_exact_len_dec.rs  prefix_len_enc.rs
