[package]
name = "varu64"
version = "0.2.0"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "A variable length encoding for unsigned 64 bit integers."
repository = "https://github.com/AljoschaMeyer/varu64-rs"
readme = "README.md"
license = "AGPL-3.0"

[dependencies]
async-serialization = "0.2.0"
atm-io-utils = "0.2.1"
futures-core = "0.2.0-alpha"
futures-io = "0.2.0-alpha"

[dev-dependencies]
futures-util = "0.2.0-alpha"
futures-executor = "0.2.0-alpha"
