[package]
name = "varu64"
version = "0.4.0"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "A variable length encoding for unsigned 64 bit integers."
repository = "https://github.com/AljoschaMeyer/varu64-rs"
readme = "README.md"
license = "AGPL-3.0"

[dependencies]
async-codec = "0.2.0"
atm-io-utils = { version = "0.2.3", features = ["quickcheck"] } # quickcheck is only needed for the tests
futures-core = "0.2.0-alpha"
futures-io = "0.2.0-alpha"
async-codec-util = "0.2.1"

[dev-dependencies]
async-ringbuffer = "0.3.0"
futures-util = "0.2.0-alpha"
futures-executor = "0.2.0-alpha"
quickcheck = "0.6"
